# ChangeLog for net-mail/balsa
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.17 2002/08/19 19:59:49 stroke Exp $

*balsa-1.4.0 (19 Aug 2002) 
  19 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-1.4.0.ebuild: 
  New version for gtk1/GNOME1, removed balsa-x.x.x-gentoo.patch which is 
  no longer actual, --with-mailpath=/var/mail is now passed to the balsa
  configure and not the libmutt/configure 

*balsa-2.0.1-r1 (02 Jul 2002)
  02 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.1-r1.ebuild :
  Added workaround for bug #4095, it replaces the varmail patch which has
  been removed. (Closes bug #4095)
  Updated deps.

*balsa-2.0.1 (17 Jun 2002)
  17 Jun 2002; Spider< spider @gentoo.org> balsa-2.0.1.ebuild :
  Updated the LIB patch to work
  the varmail patch seems no longer actual 
  new version
  
balsa-2.0.0_pre1-r1 (10 June 2002)
  10 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.0_pre1-r1.ebuild :
  Changed deps to match with the new location of libgnomeprint and libgnomeprintui 
  (in gnome-base actually)

balsa-2.0.0_pre1 (3 June 2002)
  3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.0_pre1.ebuild :
  files/balsa-2.0.0-varmail.patch added to fix bug #3251

balsa-2.0.0_pre1 (30 May 2002)
  30 May 2002; Spider <spider@gentoo.org> balsa-2.0.0_pre1.ebuild :
  add a missing dep for pspell 

*balsa-2.0.0_pre1 (30 May 2002)
  30 May 2002; Spider <spider@gentoo.org> balsa-2.0.0_pre1.ebuild :
  Adding the Gnome2 branch
  updated the patch to apply
  please note that this is a "technical preview" thats why I added the
  _pre1 and the date tag inside the ebuild, when balsa updates the
  package we can modify the date and upp the pre until the final version
  is released.

  Btw.. do balsa -ever- release a "stable" product? I sense debianism
  here.

*balsa-1.3.6-r1 (28 May 2002)