@@ -1,6 +1,13 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.17 2002/08/19 19:59:49 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.18 2002/09/04 06:06:39 seemant Exp $
+
+*balsa-1.4.0-r1 (03 Sep 2002)
+
+  03 Sep 2002; Seemant Kulleen <seemant@gentoo.org> balsa-1.3.6-r2.ebuild
+  balsa-1.4.0-r1.ebuild balsa-2.0.1-r1.ebuild :
+
+  Changed spell dependency to aspell-0.50 instead of pspell
 
 *balsa-1.4.0 (19 Aug 2002) 
   19 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-1.4.0.ebuild: 
